--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
 
         <div id="qr-container" class="qr-container card">
             <div id="qrcode"></div>
+            <div class="form-group">
+                <label for="filename">File Name (Optional)</label>
+                <input type="text" id="filename" placeholder="Leave blank for default name">
+            </div>
             <button id="download-btn" class="btn btn-secondary">Download QR Code</button>
         </div>
     </div>
@@ -176,4 +180,4 @@
 
     <script src="script.js"></script>
 </body>
-                      </html>
+    </html>
